Implement basic battle window

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/6/21, 11:55 PM.
+# This file was last modified at 2/7/21, 2:59 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -32,6 +32,7 @@ pause.exit=Zum Hauptmenu
 disconnected-from-server=Verbindung zum Server geschlossen.
 joined-game=ist dem Spiel beigetreten!
 # WINDOWS
+window.battle=Kampf
 window.chat=Chat
 window.debug=Debug
 window.menu=Menu
