--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/6/21, 11:55 PM.
+# This file was last modified at 2/7/21, 2:58 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -32,6 +32,7 @@ pause.exit=Return to Menu
 disconnected-from-server=Disconnected from server.
 joined-game=joined the game!
 # WINDOWS
+window.battle=Battle
 window.chat=Chat
 window.debug=Debug
 window.menu=Menu
