--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -56,3 +56,8 @@ keybind.debug=Toggle Debug-Info
 keybind.chat=Toggle Chat
 keybind.party=Toggle Party
 keybind.pauseMenu=Toggle Pause-Menü
+pokemon.Level=Level
+pokemon.hp=Hp
+pokemon.attack=Angriff
+pokemon.defense=Verteidigung
+pokemon.speed=Geschwindigkeit
