--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -56,3 +56,8 @@ keybind.debug=Toggle Debug Info
 keybind.chat=Toggle Chat
 keybind.party=Toggle Party
 keybind.pauseMenu=Toggle Pause Menu
+pokemon.Level=Level
+pokemon.hp=Hp
+pokemon.attack=Attack
+pokemon.defense=Defense
+pokemon.speed=Speed
