--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/7/21, 2:58 AM.
+# This file was last modified at 2/7/21, 3:35 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -57,7 +57,8 @@ keybind.debug=Toggle Debug Info
 keybind.chat=Toggle Chat
 keybind.party=Toggle Party
 keybind.pauseMenu=Toggle Pause Menu
-pokemon.Level=Level
+# POKEMON STATUS
+pokemon.level=Level
 pokemon.hp=Hp
 pokemon.attack=Attack
 pokemon.defense=Defense
