Add full translation to summary

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/7/21, 2:59 AM.
+# This file was last modified at 2/7/21, 3:54 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -57,8 +57,17 @@ keybind.debug=Toggle Debug-Info
 keybind.chat=Toggle Chat
 keybind.party=Toggle Party
 keybind.pauseMenu=Toggle Pause-Menü
-pokemon.Level=Level
+# POKEMON STATUS
+pokemon.level=Level
 pokemon.hp=Hp
 pokemon.attack=Angriff
 pokemon.defense=Verteidigung
 pokemon.speed=Geschwindigkeit
+pokemon.exp-left=EXP bis zum nächsten Level:
+# TYPES
+type.Normal=Normal
+type.Fighting=Kampf
+type.Fire=Feuer
+type.Plant=Pflanze
+type.Water=Wasser
+type.Electric=Elektro
