Fix locale exp left keys

--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/7/21, 3:53 AM.
+# This file was last modified at 2/7/21, 3:56 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -63,7 +63,7 @@ pokemon.hp=Hp
 pokemon.attack=Attack
 pokemon.defense=Defense
 pokemon.speed=Speed
-pokemon.exp-left=Experience to next level:
+pokemon.exp-left=Experience to next level
 # TYPES
 type.Normal=Normal
 type.Fighting=Fighting
