Fix a few remaining issues with summary + add translations

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/7/21, 3:56 AM.
+# This file was last modified at 2/7/21, 9:51 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -63,6 +63,9 @@ pokemon.hp=Hp
 pokemon.attack=Angriff
 pokemon.defense=Verteidigung
 pokemon.speed=Geschwindigkeit
+pokemon.moves=Attacken
+pokemon.move.damage=Schaden
+pokemon.move.accuracy=Genauigkeit
 pokemon.exp-left=EXP bis zum nächsten Level
 # TYPES
 type.Normal=Normal
@@ -71,3 +74,6 @@ type.Fire=Feuer
 type.Plant=Pflanze
 type.Water=Wasser
 type.Electric=Elektro
+# MOVES
+move.quickattack=Ruckzuckhieb
+move.thundershock=Donnerschock
