--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/7/21, 3:56 AM.
+# This file was last modified at 2/7/21, 9:51 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -63,6 +63,9 @@ pokemon.hp=Hp
 pokemon.attack=Attack
 pokemon.defense=Defense
 pokemon.speed=Speed
+pokemon.moves=Moves
+pokemon.move.damage=Power
+pokemon.move.accuracy=Accuracy
 pokemon.exp-left=Experience to next level
 # TYPES
 type.Normal=Normal
@@ -71,3 +74,5 @@ type.Fire=Fire
 type.Plant=Plant
 type.Water=Water
 type.Electric=Electric
+# MOVES
+move.quickattack=Quick Attack
