--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -77,3 +77,17 @@ type.Electric=Elektro
 # MOVES
 move.quickattack=Ruckzuckhieb
 move.thundershock=Donnerschock
+move.lowsweep=Fußtritt
+move.vitalthrow=Überwurf
+move.heatwave =HHitzewelle
+move.firefang=Feuerzahn
+move.vinewhip=Rankenhieb
+move.leaftornado=Grasmixer
+move.bubble=Blubber
+move.bubblebeam=Blubberstrahl
+#SPECIES
+species.eevee=Evoli
+species.machop=Machollo
+species.charizard=Glurak
+species.snivy=Serpifeu
+species.piplup=Plinfa
