--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -71,8 +71,15 @@ pokemon.exp-left=Experience to next level
 type.Normal=Normal
 type.Fighting=Fighting
 type.Fire=Fire
-type.Plant=Plant
+type.Plant=Grass
 type.Water=Water
 type.Electric=Electric
 # MOVES
 move.quickattack=Quick Attack
+move.lowsweep=Low Sweep
+move.vitalthrow=Vital Throw
+move.heatwave =Heat Wave
+move.firefang=Fire Fang
+move.vinewhip=Vine Whip
+move.leaftornado=Leaf Tornado
+move.bubblebeam=Bubble Beam
