Basic actor scripting

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/7/21, 9:51 PM.
+# This file was last modified at 2/10/21, 11:40 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -31,6 +31,7 @@ pause.options=Einstellungen
 pause.exit=Zum Hauptmenu
 disconnected-from-server=Verbindung zum Server geschlossen.
 joined-game=ist dem Spiel beigetreten!
+dialogui.next=Weiter
 # WINDOWS
 window.battle=Kampf
 window.chat=Chat
@@ -52,7 +53,7 @@ keybind.walkForward=Laufe vorwärts
 keybind.walkBackward=Laufe rückwärts
 keybind.walkRight=Laufe rechts
 keybind.walkLeft=Laufe links
-keybind.players-online=Spieler Online
+keybind.onlinePlayers=Spieler Online
 keybind.debug=Toggle Debug-Info
 keybind.chat=Toggle Chat
 keybind.party=Toggle Party
@@ -85,9 +86,16 @@ move.vinewhip=Rankenhieb
 move.leaftornado=Grasmixer
 move.bubble=Blubber
 move.bubblebeam=Blubberstrahl
-#SPECIES
+# SPECIES
 species.eevee=Evoli
 species.machop=Machollo
 species.charizard=Glurak
 species.snivy=Serpifeu
-species.piplup=Plinfa
+species.piplup=Plinfa# DIALOG
+# DIALOG
+dialog.joey.0=Hi! Ich bin Joey!
+dialog.joey.1=Wie war dein Tag heute?
+dialog.joey.2=gut.
+# DIALOGTITLE
+dialogtitle.joey=Joey
+dialogtitle.player=Spieler
