--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/7/21, 9:51 PM.
+# This file was last modified at 2/10/21, 11:42 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -31,6 +31,7 @@ pause.options=Options
 pause.exit=Return to Menu
 disconnected-from-server=Disconnected from server.
 joined-game=joined the game!
+dialogui.next=Next
 # WINDOWS
 window.battle=Battle
 window.chat=Chat
@@ -52,7 +53,7 @@ keybind.walkForward=Walk Forward
 keybind.walkBackward=Walk Backward
 keybind.walkRight=Walk Right
 keybind.walkLeft=Walk Left
-keybind.players-online=Toggle Online Players
+keybind.onlinePlayers=Toggle Online Players
 keybind.debug=Toggle Debug Info
 keybind.chat=Toggle Chat
 keybind.party=Toggle Party
@@ -78,8 +79,15 @@ type.Electric=Electric
 move.quickattack=Quick Attack
 move.lowsweep=Low Sweep
 move.vitalthrow=Vital Throw
-move.heatwave =Heat Wave
+move.heatwave=Heat Wave
 move.firefang=Fire Fang
 move.vinewhip=Vine Whip
 move.leaftornado=Leaf Tornado
 move.bubblebeam=Bubble Beam
+# DIALOG
+dialog.joey.0=Hello! I'm Joey!
+dialog.joey.1=How's your day?
+dialog.joey.2=good.
+# DIALOGTITLE
+dialogtitle.joey=Joey
+dialogtitle.player=Player
