Bunch of refactors, style fixes and documentation

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/10/21, 11:40 PM.
+# This file was last modified at 2/11/21, 5:15 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -25,10 +25,9 @@ login.start=Verbinden
 login.unknown-user=Unbekannter User.
 login.wrong-password=Falsches Passwort.
 # IN-GAME
-pause=Pause
-pause.continue=Zurück zum Spiel
-pause.options=Einstellungen
-pause.exit=Zum Hauptmenu
+exit.tooltip=Spiel Beenden
+exit.title=Beenden?
+exit.msg=Bist du sicher, dass du das Spiel beenden willst?
 disconnected-from-server=Verbindung zum Server geschlossen.
 joined-game=ist dem Spiel beigetreten!
 dialogui.next=Weiter
