--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/10/21, 11:42 PM.
+# This file was last modified at 2/11/21, 5:15 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -25,10 +25,9 @@ login.start=Connect
 login.unknown-user=Unknown user.
 login.wrong-password=Incorrect password.
 # IN-GAME
-pause=Pause
-pause.continue=Continue Playing
-pause.options=Options
-pause.exit=Return to Menu
+exit.tooltip=Exit Game
+exit.title=Exit?
+exit.msg=Are you sure you wish to exit and return to the main menu?
 disconnected-from-server=Disconnected from server.
 joined-game=joined the game!
 dialogui.next=Next
