--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/11/21, 5:15 PM.
+# This file was last modified at 2/11/21, 10:16 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -46,6 +46,9 @@ chat.new=Neu
 chat.unknown-user=Unbekannter User.
 # PARTY
 party.level=Level
+# BATTLE
+battle.attack=Angriff
+battle.switch=Pokemon
 # OPTIONS
 options.controls=Steuerung
 keybind.walkForward=Laufe vorwärts
