NPC battle scripting

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/11/21, 10:16 PM.
+# This file was last modified at 2/11/21, 11:08 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -77,12 +77,14 @@ type.Fire=Feuer
 type.Plant=Pflanze
 type.Water=Wasser
 type.Electric=Elektro
+# TRAINERS
+trainer.joey=Joey
 # MOVES
 move.quickattack=Ruckzuckhieb
 move.thundershock=Donnerschock
 move.lowsweep=Fußtritt
 move.vitalthrow=Überwurf
-move.heatwave =HHitzewelle
+move.heatwave=HHitzewelle
 move.firefang=Feuerzahn
 move.vinewhip=Rankenhieb
 move.leaftornado=Grasmixer
@@ -98,6 +100,7 @@ species.piplup=Plinfa# DIALOG
 dialog.joey.0=Hi! Ich bin Joey!
 dialog.joey.1=Wie war dein Tag heute?
 dialog.joey.2=gut.
+dialog.joey.3=Abfahrt!
 # DIALOGTITLE
 dialogtitle.joey=Joey
 dialogtitle.player=Spieler
