--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/11/21, 10:16 PM.
+# This file was last modified at 2/11/21, 10:39 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -70,6 +70,8 @@ pokemon.moves=Moves
 pokemon.move.damage=Power
 pokemon.move.accuracy=Accuracy
 pokemon.exp-left=Experience to next level
+# TRAINERS
+trainer.joey=Joey
 # TYPES
 type.Normal=Normal
 type.Fighting=Fighting
@@ -90,6 +92,7 @@ move.bubblebeam=Bubble Beam
 dialog.joey.0=Hello! I'm Joey!
 dialog.joey.1=How's your day?
 dialog.joey.2=good.
+dialog.joey.3=Fite me!
 # DIALOGTITLE
 dialogtitle.joey=Joey
 dialogtitle.player=Player
