Move battles into own component, more battle handling

--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/11/21, 10:39 PM.
+# This file was last modified at 2/12/21, 2:46 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -49,6 +49,7 @@ party.level=Level
 # BATTLE
 battle.attack=Attack
 battle.switch=Switch
+battle.waiting=Waiting for opponent...
 # OPTIONS
 options.controls=Controls
 keybind.walkForward=Walk Forward
