added more trainers with different pokemons(also added to I18n)

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -80,6 +80,8 @@ type.Water=Wasser
 type.Electric=Elektro
 # TRAINERS
 trainer.joey=Joey
+trainer.timmy=Timmy
+trainer.josh=Josh
 # MOVES
 move.quickattack=Ruckzuckhieb
 move.thundershock=Donnerschock
