--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -73,6 +73,8 @@ pokemon.move.accuracy=Accuracy
 pokemon.exp-left=Experience to next level
 # TRAINERS
 trainer.joey=Joey
+trainer.timmy=Timmy
+trainer.josh=Josh
 # TYPES
 type.Normal=Normal
 type.Fighting=Fighting
