Fully implemement battle turns with client GUI!

--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/12/21, 2:46 AM.
+# This file was last modified at 2/18/21, 3:54 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -50,6 +50,12 @@ party.level=Level
 battle.attack=Attack
 battle.switch=Switch
 battle.waiting=Waiting for opponent...
+battle.won=You won!
+battle.lost=You lost...
+battle.over-title=Battle Over
+battle.fainted={0} fainted!
+battle.switched-in={0} was switched in!
+battle.attack-used={0} used {1}!
 # OPTIONS
 options.controls=Controls
 keybind.walkForward=Walk Forward
