--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/12/21, 2:46 AM.
+# This file was last modified at 2/18/21, 3:54 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -50,6 +50,12 @@ party.level=Level
 battle.attack=Angriff
 battle.switch=Pokemon
 battle.waiting=Warte auf Gegner...
+battle.won=Du hast gewonnen!
+battle.lost=Du hast verloren...
+battle.over-title=Battle Over
+battle.fainted={0} ist in Ohnmacht gefallen!
+battle.switched-in={0} wurde eingewechselt!
+battle.attack-used={0} setzt {1} ein!
 # OPTIONS
 options.controls=Steuerung
 keybind.walkForward=Laufe vorwärts
