--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/18/21, 3:54 PM.
+# This file was last modified at 2/18/21, 6:18 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -49,6 +49,10 @@ party.level=Level
 # BATTLE
 battle.attack=Attack
 battle.switch=Switch
+battle.run=Run
+battle.what-do=What to do?
+battle.wild-attack={0} jumped at you!
+battle.trainer-challenge={0} challenged you!
 battle.waiting=Waiting for opponent...
 battle.won=You won!
 battle.lost=You lost...
