--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/18/21, 3:54 PM.
+# This file was last modified at 2/18/21, 6:18 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -49,6 +49,10 @@ party.level=Level
 # BATTLE
 battle.attack=Angriff
 battle.switch=Pokemon
+battle.run=Fliehen
+battle.what-do=Was willst du tun?
+battle.wild-attack={0} griff dich an!
+battle.trainer-challenge=Du wurdest von Trainer {0} herausgefordert!
 battle.waiting=Warte auf Gegner...
 battle.won=Du hast gewonnen!
 battle.lost=Du hast verloren...
