Catching wild pokemon

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/18/21, 6:18 PM.
+# This file was last modified at 2/18/21, 6:58 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -53,6 +53,9 @@ battle.run=Fliehen
 battle.what-do=Was willst du tun?
 battle.wild-attack={0} griff dich an!
 battle.trainer-challenge=Du wurdest von Trainer {0} herausgefordert!
+battle.catch=Fangen
+battle.caught=Du hast {0} gefangen!
+battle.caught-title=Erfolg!!
 battle.waiting=Warte auf Gegner...
 battle.won=Du hast gewonnen!
 battle.lost=Du hast verloren...
@@ -85,7 +88,7 @@ pokemon.exp-left=EXP bis zum nächsten Level
 type.Normal=Normal
 type.Fighting=Kampf
 type.Fire=Feuer
-type.Plant=Pflanze
+type.Grass=Pflanze
 type.Water=Wasser
 type.Electric=Elektro
 # TRAINERS
