--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/18/21, 6:18 PM.
+# This file was last modified at 2/18/21, 6:58 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -53,6 +53,9 @@ battle.run=Run
 battle.what-do=What to do?
 battle.wild-attack={0} jumped at you!
 battle.trainer-challenge={0} challenged you!
+battle.catch=Catch
+battle.caught=You caught {0}!
+battle.caught-title=Success!!
 battle.waiting=Waiting for opponent...
 battle.won=You won!
 battle.lost=You lost...
@@ -89,7 +92,7 @@ trainer.josh=Josh
 type.Normal=Normal
 type.Fighting=Fighting
 type.Fire=Fire
-type.Plant=Grass
+type.Grass=Grass
 type.Water=Water
 type.Electric=Electric
 # MOVES
