Actor collision and "interact" player action

--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/18/21, 6:58 PM.
+# This file was last modified at 2/25/21, 12:24 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -74,6 +74,7 @@ keybind.debug=Toggle Debug Info
 keybind.chat=Toggle Chat
 keybind.party=Toggle Party
 keybind.pauseMenu=Toggle Pause Menu
+keybind.interact=Interact
 # POKEMON STATUS
 pokemon.level=Level
 pokemon.hp=Hp
