Make battle window prettier

--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/25/21, 12:24 AM.
+# This file was last modified at 2/25/21, 1:22 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -48,7 +48,9 @@ chat.unknown-user=Unknown user.
 party.level=Level
 # BATTLE
 battle.attack=Attack
+battle.choose-attack=Choose an attack!
 battle.switch=Switch
+battle.choose-pokemon=Choose pokemon to send in!
 battle.run=Run
 battle.what-do=What to do?
 battle.wild-attack={0} jumped at you!
