--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/25/21, 12:24 AM.
+# This file was last modified at 2/25/21, 1:23 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -48,7 +48,9 @@ chat.unknown-user=Unbekannter User.
 party.level=Level
 # BATTLE
 battle.attack=Angriff
+battle.choose-attack=Wähle einen Angriff!
 battle.switch=Pokemon
+battle.choose-pokemon=Wähle ein Pokemon, dass du einwechselst!
 battle.run=Fliehen
 battle.what-do=Was willst du tun?
 battle.wild-attack={0} griff dich an!
