--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/25/21, 1:22 AM.
+# This file was last modified at 3/2/21, 12:01 AM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -112,61 +112,37 @@ dialog.joey.0=Hello! I'm Joey!
 dialog.joey.1=How's your day?
 dialog.joey.2=good.
 dialog.joey.3=Fite me!
-
 dialog.sign_P.0=Your House
-
-dialog.sign_R.0=Your Friends House
-
+dialog.sign_R.0=Your Friend's House
 dialog.sign_S.0=PokeSchool
-
 dialog.sign_L.0=PokeLab
-
-dialog.teacher.0=Have Fun on your Journey
-dialog.teacher.1=Take care of your new Pokemon
-
-dialog.kid_TL.0=i give your book back as soon as possible
-
-dialog.kid_BL.0=Why did i not get a Pokemon?
-
-dialog.kid_BR.0=Have Fun on your Journey
-
-dialog.twins.0=Go away i play with my brother
-
-dialog.board.0=On board is standing a little picture
-dialog.board.1=You have never seen it before
+dialog.teacher.0=Have fun on your journey!
+dialog.teacher.1=Take care of your new Pokemon.
+dialog.kid_TL.0=I'll give you your book back as soon as possible.
+dialog.kid_BL.0=Why did I not get a Pokemon?
+dialog.kid_BR.0=Have fun on your journey!
+dialog.twins.0=Go away, I'm playing with my brother!
+dialog.board.0=There's a little picture on the blackboard.
+dialog.board.1=You have never seen it before.
 dialog.board.2=You're not particularly interested...
-
-dialog.machine.0=You don't know how this machiner works!
-dialog.machine.1=You should leave it how it is!
-
-dialog.pc.0=This is not your pc
-
-dialog.books.0=You cant read the record
-
-dialog.bookL.0=Some interesting books
-
-dialog.bookR.0=Some uninteresting books
-
-dialog.bed.0=Not your bed
-
-dialog.console.0=Not your console
-
-dialog.tv.0=Tv is off
-
-dialog.fridge.0=The fridge is empty
-
-dialog.gc.0=The console is plugged out
-
-dialog.book.0=You already finished this book
-
-dialog.pcY.0=Your mom added a password
-
-dialog.bedY.0=It is sunny outside
-dialog.bedY.1=You should go out
-
-dialog.mum.0=You got such a sweet Pokemon
-dialog.mum.1=Take care of it
-dialog.mum.2=And take care of yourself
+dialog.machine.0=You don't know how this machine works!
+dialog.machine.1=You decide to leave it as it is.
+dialog.pc.0=This is not your PC!
+dialog.books.0=You can't read the data on this record.
+dialog.bookL.0=Some interesting books?
+dialog.bookR.0=Some uninteresting books?
+dialog.bed.0=Not your bed!
+dialog.console.0=Not your console!
+dialog.tv.0=The TV is off.
+dialog.fridge.0=The fridge is empty.
+dialog.gc.0=The console is not plugged in.
+dialog.book.0=You already finished this book...
+dialog.pcY.0=Your mom put a password...
+dialog.bedY.0=It is sunny outside.
+dialog.bedY.1=You should go out.
+dialog.mum.0=You got such a sweet Pokemon!
+dialog.mum.1=Take care of it.
+dialog.mum.2=Don't forget to take care of yourself, too!
 # DIALOGTITLE
 dialogtitle.joey=Joey
 dialogtitle.player=Player
