Cap maximum player pokemon

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 2/25/21, 1:23 AM.
+# This file was last modified at 3/6/21, 6:37 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -58,6 +58,8 @@ battle.trainer-challenge=Du wurdest von Trainer {0} herausgefordert!
 battle.catch=Fangen
 battle.caught=Du hast {0} gefangen!
 battle.caught-title=Erfolg!!
+battle.team-full=Dein Team ist voll! Lasse erst ein anderes Pokemon frei.
+battle.team-full-title=Unfangbar!
 battle.waiting=Warte auf Gegner...
 battle.won=Du hast gewonnen!
 battle.lost=Du hast verloren...
