--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 3/2/21, 12:01 AM.
+# This file was last modified at 3/6/21, 6:37 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -58,6 +58,8 @@ battle.trainer-challenge={0} challenged you!
 battle.catch=Catch
 battle.caught=You caught {0}!
 battle.caught-title=Success!!
+battle.team-full=Your team is full! Release another pokemon first.
+battle.team-full-title=Cannot catch!
 battle.waiting=Waiting for opponent...
 battle.won=You won!
 battle.lost=You lost...
