Add support for releasing pokemon

--- a/assets/i18n/locale_de.properties
+++ b/assets/i18n/locale_de.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 3/6/21, 6:37 PM.
+# This file was last modified at 3/6/21, 7:08 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -89,6 +89,9 @@ pokemon.moves=Attacken
 pokemon.move.damage=Schaden
 pokemon.move.accuracy=Genauigkeit
 pokemon.exp-left=EXP bis zum nächsten Level
+pokemon.release=Freilassen
+pokemon.release-title=Pokemon freilassen
+pokemon.release-confirm=Bist du dir sicher, dass du es freilassen willst?\nDu kannst es nicht zurückbekommen!
 # TYPES
 type.Normal=Normal
 type.Fighting=Kampf
@@ -122,58 +125,34 @@ dialog.joey.0=Hi! Ich bin Joey!
 dialog.joey.1=Wie war dein Tag heute?
 dialog.joey.2=gut.
 dialog.joey.3=Abfahrt!
-
 dialog.sign_P.0=Dein Haus
-
 dialog.sign_R.0=Das Haus deines Freundes
-
 dialog.sign_S.0=Die Pokemonschule
-
 dialog.sign_L.0=Das Pokemon Labor
-
 dialog.teacher.0=Viel Spaß auf deiner Reise
 dialog.teacher.1=Kümmer dich gut um dein Pokemon
-
 dialog.kid_TL.0=Dein Buch bekommst du bald zurück
-
 dialog.kid_BL.0=Warum bekomme ich kein Pokemon?
-
 dialog.kid_BR.0=Viel Spaß auf deiner Reise
-
 dialog.twins.0=Nicht stören ich spiele gegen meinen Bruder
-
 dialog.board.0=An der Tafel steht ein kleines Bild
 dialog.board.1=Du hast dieses Bild noch nie zuvor gesehen
 dialog.board.2=Du kümmerst dich nicht weiter darum...
-
 dialog.machine.0=Du weißt nicht wie man diese Maschine bedient!
 dialog.machine.1=Du solltest sie in Ruhe lassen!
-
 dialog.pc.0=Das ist nicht dein Pc
-
 dialog.books.0=Du kannst die Aufzeichnungen nicht entziffern
-
 dialog.bookL.0=Ein paar interessante Bücher
-
 dialog.bookR.0=Ein paar uninteressante Bücher
-
 dialog.bed.0=Das ist nicht dein Bett
-
 dialog.console.0=Das ist nicht deine Konsole
-
 dialog.tv.0=Der Fernseher ist aus
-
 dialog.fridge.0=Der Kühlschrank ist leer
-
 dialog.gc.0=Die Konsole ist nicht angeschlossen
-
 dialog.book.0=Du bist mit dem Buch schon fertig
-
 dialog.pcY.0=Deine Mutter hat ein Passwort hinzugefügt
-
 dialog.bedY.0=Es ist hell draußen
 dialog.bedY.1=Du solltest rausgehen
-
 dialog.mum.0=Du hast ja ein niedliches Pokemon bekommen
 dialog.mum.1=Pass gut darauf auf
 dialog.mum.2=Und auf dich auch
