--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 3/6/21, 6:37 PM.
+# This file was last modified at 3/6/21, 7:08 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -89,6 +89,9 @@ pokemon.moves=Moves
 pokemon.move.damage=Power
 pokemon.move.accuracy=Accuracy
 pokemon.exp-left=Experience to next level
+pokemon.release=Release
+pokemon.release-title=Release Pokemon
+pokemon.release-confirm=Are you sure you want to release this Pokemon?\nYou won't be able to get it back!
 # TRAINERS
 trainer.joey=Joey
 trainer.timmy=Timmy
