--- a/assets/i18n/locale_en.properties
+++ b/assets/i18n/locale_en.properties
@@ -1,6 +1,6 @@
 #
 # Developed as part of the Cramolith project.
-# This file was last modified at 3/6/21, 7:08 PM.
+# This file was last modified at 3/21/21, 11:28 PM.
 # Copyright 2021, see git repository at git.angm.xyz for authors and other info.
 # This file is under the GPL3 license. See LICENSE in the root directory of this repository for details.
 #
@@ -44,6 +44,7 @@ window.summary=Summary
 chat.add=Add Chat
 chat.new=New
 chat.unknown-user=Unknown user.
+chat.send=Send
 # PARTY
 party.level=Level
 # BATTLE
